# P1-examination

./: Commands.md
busroute/: CMakeLists.txt  package.xml
busroute/config/: busrouting.rviz
busroute/include/color/: color.h  colordetect.h
busroute/include/explore1/: costmap_client.h  explore.h
busroute/include/getSensor1/: getSensor.h
busroute/include/task1/: tasks.h
busroute/launch/: colorDetect.launch  explore.launch  exploreGaz.launch  explore_costmap.launch  gmapping_demo.launch  turtlebot_gazebo_gmapping.launch  turtlebot_start.launch
busroute/launch/Py_Launch/: y_launch.py
busroute/launch/includes/: move_base.launch.xml  velocity_smoother.launch.xml
busroute/launch/includes/gmapping/: astra_gmapping.launch.xml  asus_xtion_pro_gmapping.launch.xml  asus_xtion_pro_offset_gmapping.launch.xml  gmapping.launch.xml  kinect_gmapping.launch.xml  r200_gmapping.launch.xml
busroute/map/: ExploreMap.world  ExploreMap1.world  my_map.pgm
busroute/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml  smoother.yaml
busroute/src/: auto_docking.cpp  bumpertest.cpp  color.cpp  colordetect.cpp  costmap_client.cpp  explore.cpp  frontier_search.cpp  getSensor.cpp  navigation.cpp  tasks.cpp
